--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dayjs": "^1.11.13",
     "flowbite-react": "^0.10.2",
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-router": "6.22.3",
     "react-router-dom": "6.22.3",
     "react-scripts": "5.0.1",
